--- a/admin.html
+++ b/admin.html
@@ -19,106 +19,167 @@
 </head>
 
 <body class="bg-gray-100 min-h-screen">
-    <nav class="bg-gray-800 text-white shadow-lg">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-16">
-                <div class="flex items-center">
-                    <span class="font-bold text-xl">Cherryza Admin</span>
-                    <a href="index.html"
-                        class="ml-10 text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium">View
-                        Site</a>
-                </div>
-            </div>
-        </div>
-    </nav>
 
-    <main class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
-        <div class="px-4 py-6 sm:px-0">
-            <div class="flex justify-between items-center mb-6">
-                <h1 class="text-2xl font-bold text-gray-900">Product Management</h1>
-                <button onclick="openModal()"
-                    class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded shadow transition">
-                    + Add New Product
-                </button>
+    <!-- Login Screen -->
+    <div id="login-screen" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-100">
+        <div class="bg-white p-8 rounded-xl shadow-2xl w-full max-w-sm border border-gray-200">
+            <div class="text-center mb-8">
+                <span class="block text-4xl mb-2">🍒</span>
+                <h2 class="text-2xl font-bold text-gray-900">Admin Access</h2>
+                <p class="text-gray-500 text-sm mt-1">Cherryza Beauty</p>
             </div>
-
-            <div class="bg-white shadow overflow-hidden sm:rounded-md">
-                <ul id="product-list" class="divide-y divide-gray-200">
-                    <!-- Products injected here -->
-                </ul>
-            </div>
-        </div>
-    </main>
-
-    <!-- Modal -->
-    <div id="product-modal" class="fixed z-50 inset-0 overflow-y-auto hidden" aria-labelledby="modal-title"
-        role="dialog" aria-modal="true">
-        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"
-                onclick="closeModal()"></div>
-            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-            <div
-                class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
-                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-                    <h3 class="text-lg leading-6 font-medium text-gray-900 mb-4" id="modal-title">Product Details</h3>
-                    <form id="product-form" class="space-y-4">
-                        <input type="hidden" id="p-id">
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700">Name</label>
-                            <input type="text" id="p-name"
-                                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
-                        </div>
-                        <div class="grid grid-cols-2 gap-4">
-                            <div>
-                                <label class="block text-sm font-medium text-gray-700">Price (USD)</label>
-                                <input type="number" step="0.01" id="p-price"
-                                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
-                            </div>
-                            <div>
-                                <label class="block text-sm font-medium text-gray-700">Stock</label>
-                                <input type="number" id="p-stock"
-                                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
-                            </div>
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700">Category</label>
-                            <select id="p-category"
-                                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2">
-                                <option value="Lips">Lips</option>
-                                <option value="Face">Face</option>
-                                <option value="Eyes">Eyes</option>
-                                <option value="Skincare">Skincare</option>
-                            </select>
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700">Image URL</label>
-                            <input type="url" id="p-image"
-                                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"
-                                placeholder="https://..." required>
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700">Description</label>
-                            <textarea id="p-desc" rows="3"
-                                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"
-                                required></textarea>
-                        </div>
-                    </form>
+            <form onsubmit="handleLogin(event)" class="space-y-4">
+                <div>
+                    <label
+                        class="block text-xs font-semibold text-gray-600 uppercase tracking-wide mb-1">Username</label>
+                    <input type="text" id="username"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition"
+                        placeholder="admin">
                 </div>
-                <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                    <button type="button" onclick="saveProduct()"
-                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-cherry-600 text-base font-medium text-white hover:bg-cherry-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cherry-500 sm:ml-3 sm:w-auto sm:text-sm bg-indigo-600 hover:bg-indigo-700">
-                        Save
-                    </button>
-                    <button type="button" onclick="closeModal()"
-                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-                        Cancel
-                    </button>
+                <div>
+                    <label
+                        class="block text-xs font-semibold text-gray-600 uppercase tracking-wide mb-1">Password</label>
+                    <input type="password" id="password"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition"
+                        placeholder="password">
                 </div>
-            </div>
+                <button type="submit"
+                    class="w-full bg-indigo-600 text-white py-3 rounded-lg hover:bg-indigo-700 transition duration-200 font-bold shadow-md hover:shadow-lg transform active:scale-95">Sign
+                    In</button>
+            </form>
+            <p id="login-error"
+                class="hidden text-red-500 text-center mt-4 text-sm bg-red-50 py-2 rounded border border-red-200">
+                Invalid credentials</p>
         </div>
     </div>
 
+    <!-- Protected Admin Content -->
+    <div id="admin-content" class="hidden">
+        <nav class="bg-gray-800 text-white shadow-lg">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="flex items-center justify-between h-16">
+                    <div class="flex items-center">
+                        <span class="font-bold text-xl">Cherryza Admin</span>
+                        <a href="index.html"
+                            class="ml-10 text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium">View
+                            Site</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <main class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+            <div class="px-4 py-6 sm:px-0">
+                <div class="flex justify-between items-center mb-6">
+                    <h1 class="text-2xl font-bold text-gray-900">Product Management</h1>
+                    <button onclick="openModal()"
+                        class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded shadow transition">
+                        + Add New Product
+                    </button>
+                </div>
+
+                <div class="bg-white shadow overflow-hidden sm:rounded-md">
+                    <ul id="product-list" class="divide-y divide-gray-200">
+                        <!-- Products injected here -->
+                    </ul>
+                </div>
+            </div>
+        </main>
+
+        <!-- Modal -->
+        <div id="product-modal" class="fixed z-50 inset-0 overflow-y-auto hidden" aria-labelledby="modal-title"
+            role="dialog" aria-modal="true">
+            <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+                <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"
+                    onclick="closeModal()"></div>
+                <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+                <div
+                    class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                        <h3 class="text-lg leading-6 font-medium text-gray-900 mb-4" id="modal-title">Product Details
+                        </h3>
+                        <form id="product-form" class="space-y-4">
+                            <input type="hidden" id="p-id">
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700">Name</label>
+                                <input type="text" id="p-name"
+                                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                            </div>
+                            <div class="grid grid-cols-2 gap-4">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700">Price (USD)</label>
+                                    <input type="number" step="0.01" id="p-price"
+                                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"
+                                        required>
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700">Stock</label>
+                                    <input type="number" id="p-stock"
+                                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"
+                                        required>
+                                </div>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700">Category</label>
+                                <select id="p-category"
+                                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2">
+                                    <option value="Lips">Lips</option>
+                                    <option value="Face">Face</option>
+                                    <option value="Eyes">Eyes</option>
+                                    <option value="Skincare">Skincare</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700">Image URL</label>
+                                <input type="url" id="p-image"
+                                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"
+                                    placeholder="https://..." required>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700">Description</label>
+                                <textarea id="p-desc" rows="3"
+                                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"
+                                    required></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                        <button type="button" onclick="saveProduct()"
+                            class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-cherry-600 text-base font-medium text-white hover:bg-cherry-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cherry-500 sm:ml-3 sm:w-auto sm:text-sm bg-indigo-600 hover:bg-indigo-700">
+                            Save
+                        </button>
+                        <button type="button" onclick="closeModal()"
+                            class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                            Cancel
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <script>
+        function handleLogin(e) {
+            e.preventDefault();
+            const u = document.getElementById('username').value;
+            const p = document.getElementById('password').value;
+
+            // Hardcoded credentials as requested
+            // You can change these values to secure your admin panel
+            if (u === 'admin' && p === 'cherryza123') {
+                document.getElementById('login-screen').style.display = 'none';
+                document.getElementById('admin-content').classList.remove('hidden');
+            } else {
+                const err = document.getElementById('login-error');
+                err.classList.remove('hidden');
+                // Shake animation effect
+                const loginBox = document.querySelector('#login-screen > div');
+                loginBox.classList.add('animate-pulse');
+                setTimeout(() => loginBox.classList.remove('animate-pulse'), 500);
+            }
+        }
+
         // Admin Logic
         const productList = document.getElementById('product-list');
         const modal = document.getElementById('product-modal');
