--- a/admin.html
+++ b/admin.html
@@ -192,7 +192,7 @@
             const u = document.getElementById('username').value;
             const p = document.getElementById('password').value;
 
-            if (u === 'admin' && p === 'cherryza123') {
+            if (u === 'admin' && p === 'GR-9446') {
                 sessionStorage.setItem(SESSION_KEY, 'true');
                 showAdminContent();
             } else {
