--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,10 +32,23 @@
             }
         }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
-        h1, h2, h3, h4, h5, h6 { font-family: 'Playfair Display', serif; }
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: 'Playfair Display', serif;
+        }
+
         .glass-nav {
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
@@ -42,6 +56,7 @@
         }
     </style>
 </head>
+
 <body class="bg-cherry-50 text-gray-800">
 
     <!-- Navigation -->
@@ -55,20 +70,40 @@
                     <a href="index.html" class="text-gray-700 hover:text-cherry-600 transition font-medium">Home</a>
                     <a href="shop.html" class="text-gray-700 hover:text-cherry-600 transition font-medium">Shop</a>
                     <a href="about.html" class="text-gray-700 hover:text-cherry-600 transition font-medium">About</a>
-                    <a href="contact.html" class="text-gray-700 hover:text-cherry-600 transition font-medium">Contact</a>
+                    <a href="contact.html"
+                        class="text-gray-700 hover:text-cherry-600 transition font-medium">Contact</a>
                 </div>
                 <div class="flex items-center space-x-4">
+                    <!-- Search Bar -->
+                    <form action="shop.html" method="GET"
+                        class="hidden md:flex items-center border border-gray-300 rounded-full px-3 py-1 bg-white/50 hover:bg-white transition focus-within:ring-1 ring-cherry-400">
+                        <input type="text" name="search" placeholder="Search products..."
+                            class="bg-transparent border-none focus:outline-none text-sm w-40 placeholder-gray-500 text-gray-700">
+                        <button type="submit" class="text-gray-500 hover:text-cherry-600 ml-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                            </svg>
+                        </button>
+                    </form>
                     <a href="admin.html" class="text-gray-500 hover:text-cherry-600" title="Admin Panel">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                         </svg>
                     </a>
                     <a href="cart.html" class="relative text-gray-700 hover:text-cherry-600 transition">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                         </svg>
-                        <span id="cart-count" class="absolute -top-2 -right-2 bg-cherry-600 text-white text-xs font-bold rounded-full h-5 w-5 flex items-center justify-center">0</span>
+                        <span id="cart-count"
+                            class="absolute -top-2 -right-2 bg-cherry-600 text-white text-xs font-bold rounded-full h-5 w-5 flex items-center justify-center">0</span>
                     </a>
                 </div>
             </div>
@@ -80,23 +115,31 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative">
             <div class="lg:grid lg:grid-cols-12 lg:gap-8 items-center">
                 <div class="sm:text-center md:max-w-2xl md:mx-auto lg:col-span-6 lg:text-left">
-                    <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
+                    <h1
+                        class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
                         <span class="block">Discover your true</span>
                         <span class="block text-cherry-600">Radiance & Glow</span>
                     </h1>
-                    <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Premium cosmetics designed to enhance your natural beauty. Cruelty-free, organic, and crafted with love for the modern you.
+                    <p
+                        class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+                        Premium cosmetics designed to enhance your natural beauty. Cruelty-free, organic, and crafted
+                        with love for the modern you.
                     </p>
                     <div class="mt-8 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
-                        <a href="shop.html" class="inline-flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-cherry-600 hover:bg-cherry-700 md:py-4 md:text-lg md:px-10 transition shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+                        <a href="shop.html"
+                            class="inline-flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-cherry-600 hover:bg-cherry-700 md:py-4 md:text-lg md:px-10 transition shadow-lg hover:shadow-xl transform hover:-translate-y-1">
                             Shop Collection
                         </a>
                     </div>
                 </div>
-                <div class="mt-12 relative sm:max-w-lg sm:mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-span-6 lg:flex lg:items-center">
+                <div
+                    class="mt-12 relative sm:max-w-lg sm:mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-span-6 lg:flex lg:items-center">
                     <div class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md overflow-hidden">
-                        <button class="relative block w-full bg-white rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cherry-500">
-                             <img class="w-full" src="https://images.unsplash.com/photo-1596462502278-27bfdd403348?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Cosmetics Hero">
+                        <button
+                            class="relative block w-full bg-white rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cherry-500">
+                            <img class="w-full"
+                                src="https://images.unsplash.com/photo-1596462502278-27bfdd403348?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                                alt="Cosmetics Hero">
                         </button>
                     </div>
                 </div>
@@ -109,13 +152,15 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
                 <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">Best Sellers</h2>
-                <p class="mt-4 max-w-2xl text-xl text-gray-500 mx-auto">Our most loved products, curated just for you.</p>
+                <p class="mt-4 max-w-2xl text-xl text-gray-500 mx-auto">Our most loved products, curated just for you.
+                </p>
             </div>
             <div class="mt-12 grid gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3" id="featured-products">
                 <!-- Products will be injected here by JS -->
             </div>
-             <div class="mt-10 text-center">
-                <a href="shop.html" class="text-cherry-600 font-semibold hover:text-cherry-800">View all products <span aria-hidden="true">&rarr;</span></a>
+            <div class="mt-10 text-center">
+                <a href="shop.html" class="text-cherry-600 font-semibold hover:text-cherry-800">View all products <span
+                        aria-hidden="true">&rarr;</span></a>
             </div>
         </div>
     </section>
@@ -126,7 +171,8 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
                     <span class="text-2xl font-bold tracking-wider text-cherry-400">Cherryza.</span>
-                    <p class="mt-4 text-gray-400">Enhancing beauty with nature's best ingredients. Join the revolution of self-care.</p>
+                    <p class="mt-4 text-gray-400">Enhancing beauty with nature's best ingredients. Join the revolution
+                        of self-care.</p>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
@@ -152,4 +198,5 @@
     <script src="js/data.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 </html>
