--- a/shop.html
+++ b/shop.html
@@ -74,6 +74,19 @@
                         class="text-gray-700 hover:text-cherry-600 transition font-medium">Contact</a>
                 </div>
                 <div class="flex items-center space-x-4">
+                    <!-- Search Bar -->
+                    <form action="shop.html" method="GET"
+                        class="hidden md:flex items-center border border-gray-300 rounded-full px-3 py-1 bg-white/50 hover:bg-white transition focus-within:ring-1 ring-cherry-400">
+                        <input type="text" name="search" placeholder="Search products..."
+                            class="bg-transparent border-none focus:outline-none text-sm w-40 placeholder-gray-500 text-gray-700">
+                        <button type="submit" class="text-gray-500 hover:text-cherry-600 ml-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                            </svg>
+                        </button>
+                    </form>
                     <a href="admin.html" class="text-gray-500 hover:text-cherry-600" title="Admin Panel">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
@@ -161,12 +174,38 @@
             const grid = document.getElementById('product-grid');
             const products = getProducts();
 
-            function renderProducts(filter = 'all') {
+            // Check for search query
+            const urlParams = new URLSearchParams(window.location.search);
+            const searchQuery = urlParams.get('search');
+
+            function renderProducts(filter = 'all', query = '') {
                 grid.innerHTML = '';
-                const filtered = filter === 'all' ? products : products.filter(p => p.category === filter);
+                let filtered = products;
+                const title = document.querySelector('h1');
+
+                if (filter === 'search' && query) {
+                    const q = query.toLowerCase();
+                    filtered = products.filter(p => p.name.toLowerCase().includes(q));
+                    if (title) title.innerText = `Search results for "${query}"`;
+                    // Update search box if exists
+                    const sb = document.querySelector('input[name="search"]');
+                    if (sb) sb.value = query;
+
+                    // Reset filter buttons
+                    document.querySelectorAll('.filter-btn').forEach(b => {
+                        b.classList.remove('bg-cherry-100', 'text-cherry-700', 'border-cherry-300');
+                        b.classList.add('text-gray-600', 'border-gray-300');
+                    });
+                } else if (filter !== 'all') {
+                    filtered = products.filter(p => p.category === filter);
+                    // Update title based on category if needed, or keep generic
+                    // title.innerText = filter + ' Collection';
+                } else {
+                    // title.innerText = 'Shop Collection';
+                }
 
                 if (filtered.length === 0) {
-                    grid.innerHTML = '<p class="col-span-full text-center text-gray-500">No products found in this category.</p>';
+                    grid.innerHTML = '<div class="col-span-full text-center py-12"><p class="text-xl text-gray-500">No products found matching your criteria.</p><a href="shop.html" class="mt-4 inline-block text-cherry-600 font-medium hover:underline">Clear Search</a></div>';
                     return;
                 }
 
@@ -193,7 +232,12 @@
                 });
             }
 
-            renderProducts();
+            // Initial Render
+            if (searchQuery) {
+                renderProducts('search', searchQuery);
+            } else {
+                renderProducts('all');
+            }
 
             // Filter Logic
             document.querySelectorAll('.filter-btn').forEach(btn => {
@@ -206,6 +250,15 @@
                     // Add active to clicked
                     e.target.classList.remove('text-gray-600', 'border-gray-300');
                     e.target.classList.add('bg-cherry-100', 'text-cherry-700', 'border-cherry-300');
+
+                    // Allow clearing search by clicking a filter
+                    // We update the URL to remove the search param without reloading
+                    const url = new URL(window.location);
+                    url.searchParams.delete('search');
+                    window.history.pushState({}, '', url);
+
+                    // Reset title
+                    document.querySelector('h1').innerText = 'Shop Collection';
 
                     renderProducts(e.target.dataset.filter);
                 });
