--- a/index.html
+++ b/index.html
@@ -126,6 +126,22 @@
                         with love for the modern you.
                     </p>
                     <div class="mt-8 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
+                        <!-- Hero Search -->
+                        <form action="shop.html" method="GET"
+                            class="mb-6 flex shadow-md rounded-full max-w-sm sm:mx-auto lg:mx-0 bg-white border border-gray-200 focus-within:ring-2 focus-within:ring-cherry-500 transition-shadow">
+                            <input type="text" name="search"
+                                class="flex-grow w-full px-5 py-3 rounded-l-full focus:outline-none text-gray-700 placeholder-gray-400"
+                                placeholder="Search products...">
+                            <button type="submit"
+                                class="bg-cherry-600 text-white px-6 py-3 rounded-r-full hover:bg-cherry-700 transition flex items-center justify-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                                </svg>
+                            </button>
+                        </form>
+
                         <a href="shop.html"
                             class="inline-flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-cherry-600 hover:bg-cherry-700 md:py-4 md:text-lg md:px-10 transition shadow-lg hover:shadow-xl transform hover:-translate-y-1">
                             Shop Collection
