--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="relative pt-24 pb-16 lg:pt-32 lg:pb-24 overflow-hidden">
+    <header class="relative pt-24 pb-16 lg:pt-32 lg:pb-24">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative">
             <div class="lg:grid lg:grid-cols-12 lg:gap-8 items-center">
                 <div class="sm:text-center md:max-w-2xl md:mx-auto lg:col-span-6 lg:text-left">
